# council-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
council/: __init__.py  chair.py  cli.py  config.py  db.py  events.py  formatting.py  orchestrator.py  renderers.py  repl.py  settings.py  tools.py
council/providers/: __init__.py  base.py  claude.py  gemini.py  ollama.py  openai.py
scripts/: release.sh
site/: astro.config.mjs
site/src/pages/: architecture.astro  deliberation.astro  index.astro
site/src/styles/: global.css
tests/: test_critique_filtering.py
